INCLUDES = $(all_includes)
METASOURCES = AUTO
libdialogs_la_LDFLAGS = $(all_libraries)
noinst_LTLIBRARIES = libdialogs.la
libdialogs_la_SOURCES = dialogaddsourcedir.cpp dialogaddsourcedir.h \
				dialogmanagetag.cpp dialogmanagetag.h imageviewer.cpp imageviewer.h dialogimageviewer.cpp

noinst_HEADERS = dialogimageviewer.h
