INCLUDES = $(all_includes)
METASOURCES = AUTO


KDE_ICON = kphotobook
appicondir = $(kde_datadir)/kphotobook/icons
appicon_ICON = \
andify \
collapse \
expand \
filenew \
fileopen \
filesave \
filesaveas \
filesystem_reload \
filter_deselect \
filter_reset \
folder_add \
folder_edit \
folder_green \
folder_home \
folder_red \
folder_remove \
invert \
orify \
tag \
tag_add \
tag_del \
tag_edit \
tag_lock \
tag_unlock \
view_autorefresh \
view_layout_restore \
view_refresh
