INCLUDES = $(all_includes)
METASOURCES = AUTO


KDE_ICON = kphotobook
appicondir = $(kde_datadir)/kphotobook/icons
appicon_ICON = kpb_andify kpb_collapse kpb_contents kpb_contexthelp kpb_expand kpb_filenew kpb_fileopen kpb_filesave kpb_filesaveas kpb_filesystem_reload kpb_filter_deselect kpb_filter_reset kpb_folder kpb_folder_add kpb_folder_edit kpb_folder_green kpb_folder_home kpb_folder_red kpb_folder_remove kpb_folder_txt kpb_invert kpb_kfind kpb_orify kpb_tag kpb_tag_add kpb_tag_del kpb_tag_edit kpb_tag_exif kpb_tag_lock kpb_tag_unlock kpb_view_autorefresh kpb_view_layout_restore kpb_view_refresh kpb_viewmag_minus kpb_viewmag_plus
