INCLUDES = $(all_includes)
METASOURCES = AUTO
libsettings_la_LDFLAGS = $(all_libraries)
noinst_LTLIBRARIES = libsettings.la
libsettings_la_SOURCES = settings.cpp settings.h settingsfilehandling.ui\
	settingsfilehandling.ui.h settingsgeneral.ui settingsimagepreview.ui\
	settingsimagepreview.ui.h settingssourcedirtree.ui settingstagtree.ui\
	settingstools.ui
