INCLUDES = $(all_includes)
METASOURCES = AUTO
libuitrees_la_LDFLAGS = $(all_libraries)
noinst_LTLIBRARIES = libuitrees.la
libuitrees_la_SOURCES = sourcedirtree.cpp sourcedirtree.h \
			sourcedirtreenode.cpp	sourcedirtreenode.h tagtree.cpp tagtree.h tagtreenode.cpp \
			tagtreenode.h	tagtreenodeboolean.cpp tagtreenodeboolean.h tagtreenodetitle.cpp	tagtreenodetitle.h \
			treehelper.cpp treehelper.h tagtreenodestring.cpp tagtreenodestring.h \
		tagtreenoderadiogroup.cpp tagtreenoderadiogroup.h tagtreenoderadio.cpp tagtreenoderadio.h
libuitrees_la_LIBADD = $(top_builddir)/src/engine/libengine.la
