INCLUDES = $(all_includes)
METASOURCES = AUTO
libutils_la_LDFLAGS = $(all_libraries)
noinst_LTLIBRARIES = libutils.la

# command for generating the following list:
#  ls -1 *.cpp | sed -e "s/\(.*\).cpp/\1.h \1.cpp \\\\/"
libutils_la_SOURCES = \
	actionprovider.h actionprovider.cpp \
	menuprovider.h menuprovider.cpp
