INCLUDES = $(all_includes)
METASOURCES = AUTO
libwidgets_la_LDFLAGS = $(all_libraries)
noinst_LTLIBRARIES = libwidgets.la

# command for generating the following list:
#  ls -1 *.cpp | sed -e "s/\(.*\).cpp/\1.h \1.cpp \\\\/"
libwidgets_la_SOURCES = \
	datetimewidget.h datetimewidget.cpp \
	imageviewer.h imageviewer.cpp \
	timeruler.h timeruler.cpp \
	ptrringbuffer.h
