INCLUDES = $(all_includes)
METASOURCES = AUTO


KDE_ICON = kphotobook
appicondir = $(kde_datadir)/kphotobook/icons
appicon_ICON = sourcedir_add sourcedir_edit sourcedir_remove folder_green folder_red invert invertselection tag_add tag_edit tag_del view_autorefresh view_refresh filesystem_reload expand collapse
