INCLUDES = $(all_includes)
METASOURCES = AUTO


KDE_ICON = kphotobook
appicondir = $(kde_datadir)/kphotobook/icons
appicon_ICON = andify collapse expand filenew fileopen filesaveas filesave filesystem_reload folder_green folder_red invert orify sourcedir_add sourcedir_edit sourcedir_remove tag_add tag_del tag_edit tag view_autorefresh view_refresh filter_reset filter_deselect tag_lock tag_unlock view_layout_restore
